e2e/manifests/kubernetes-api.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: kubetail-system
  labels:
    app.kubernetes.io/name: kubetail
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: kubetail-dashboard
  namespace: kubetail-system
  labels:
    app.kubernetes.io/name: kubetail
    app.kubernetes.io/component: dashboard
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app.kubernetes.io/name: kubetail
      app.kubernetes.io/component: dashboard
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kubetail
        app.kubernetes.io/component: dashboard
    spec:
      serviceAccountName: kubetail-dashboard
      containers:
        - name: kubetail-dashboard
          image: ${KUBETAIL_DASHBOARD_IMAGE}
          imagePullPolicy: Never
          args:
            - --config=/etc/kubetail/config.yaml
          ports:
            - name: http
              protocol: TCP
              containerPort: 8080
          volumeMounts:
            - name: config
              mountPath: /etc/kubetail
              readOnly: true
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /healthz
              port: http
            initialDelaySeconds: 10
            timeoutSeconds: 30
            periodSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /healthz
              port: http
            initialDelaySeconds: 10
            timeoutSeconds: 30
            periodSeconds: 5
            failureThreshold: 3
      volumes:
        - name: config
          configMap:
            name: kubetail-dashboard
---
kind: Service
apiVersion: v1
metadata:
  name: kubetail-dashboard
  namespace: kubetail-system
  labels:
    app.kubernetes.io/name: kubetail
    app.kubernetes.io/component: dashboard
spec:
  selector:
    app.kubernetes.io/name: kubetail
    app.kubernetes.io/component: dashboard
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
      appProtocol: http
