e2e/manifests/kubetail-api.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: kubetail-system
  labels:
    app.kubernetes.io/name: kubetail
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: kubetail-dashboard
  namespace: kubetail-system
  labels:
    app.kubernetes.io/name: kubetail
    app.kubernetes.io/component: dashboard
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app.kubernetes.io/name: kubetail
      app.kubernetes.io/component: dashboard
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kubetail
        app.kubernetes.io/component: dashboard
    spec:
      serviceAccountName: kubetail-dashboard
      containers:
        - name: kubetail-dashboard
          image: ${KUBETAIL_DASHBOARD_IMAGE}
          imagePullPolicy: Never
          args:
            - --config=/etc/kubetail/config.yaml
          ports:
            - name: http
              protocol: TCP
              containerPort: 8080
          volumeMounts:
            - name: config
              mountPath: /etc/kubetail
              readOnly: true
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /healthz
              port: http
            initialDelaySeconds: 10
            timeoutSeconds: 30
            periodSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /healthz
              port: http
            initialDelaySeconds: 10
            timeoutSeconds: 30
            periodSeconds: 5
            failureThreshold: 3
      volumes:
        - name: config
          configMap:
            name: kubetail-dashboard
---
kind: Service
apiVersion: v1
metadata:
  name: kubetail-dashboard
  namespace: kubetail-system
  labels:
    app.kubernetes.io/name: kubetail
    app.kubernetes.io/component: dashboard
spec:
  selector:
    app.kubernetes.io/name: kubetail
    app.kubernetes.io/component: dashboard
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
      appProtocol: http
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: kubetail-cluster-api
  namespace: kubetail-system
  labels:
    app.kubernetes.io/name: kubetail
    app.kubernetes.io/component: cluster-api
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app.kubernetes.io/name: kubetail
      app.kubernetes.io/component: cluster-api
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kubetail
        app.kubernetes.io/component: cluster-api
    spec:
      serviceAccountName: kubetail-cluster-api
      containers:
        - name: kubetail-cluster-api
          image: ${KUBETAIL_CLUSTER_API_IMAGE}
          imagePullPolicy: Never
          args:
            - --config=/etc/kubetail/config.yaml
          ports:
            - name: http
              protocol: TCP
              containerPort: 8080
          volumeMounts:
            - name: config
              mountPath: /etc/kubetail
              readOnly: true
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /healthz
              port: http
            initialDelaySeconds: 10
            timeoutSeconds: 30
            periodSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /healthz
              port: http
            initialDelaySeconds: 10
            timeoutSeconds: 30
            periodSeconds: 5
            failureThreshold: 3
      volumes:
        - name: config
          projected:
            sources:
              - configMap:
                  name: kubetail-cluster-api
              - secret:
                  name: kubetail-cluster-api-tls
              - secret:
                  name: kubetail-ca
---
kind: Service
apiVersion: v1
metadata:
  name: kubetail-cluster-api
  namespace: kubetail-system
  labels:
    app.kubernetes.io/name: kubetail
    app.kubernetes.io/component: cluster-api
spec:
  selector:
    app.kubernetes.io/name: kubetail
    app.kubernetes.io/component: cluster-api
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
      appProtocol: http
---
kind: DaemonSet
apiVersion: apps/v1
metadata:
  name: kubetail-cluster-agent
  namespace: kubetail-system
  labels:
    app.kubernetes.io/name: kubetail
    app.kubernetes.io/component: cluster-agent
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: kubetail
      app.kubernetes.io/component: cluster-agent
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kubetail
        app.kubernetes.io/component: cluster-agent
    spec:
      serviceAccountName: kubetail-cluster-agent
      containers:
        - name: kubetail-cluster-agent
          image: ${KUBETAIL_CLUSTER_AGENT_IMAGE}
          imagePullPolicy: Never
          args:
            - --config=/etc/kubetail/config.yaml
          ports:
            - name: grpc
              protocol: TCP
              containerPort: 50051
          volumeMounts:
            - name: config
              mountPath: /etc/kubetail
              readOnly: true
            - name: varlog
              mountPath: /var/log
              readOnly: true
            - name: varlibdockercontainers
              mountPath: /var/lib/docker/containers
              readOnly: true
          readinessProbe:
            exec:
              command:
                - /bin/grpc_health_probe
                - -addr=:50051
                - -tls
                - -tls-ca-cert=/etc/kubetail/ca.crt
                - -tls-server-name=kubetail-cluster-agent.kubetail-system.svc
                - -tls-client-cert=/etc/kubetail/tls.crt
                - -tls-client-key=/etc/kubetail/tls.key
            initialDelaySeconds: 10
            timeoutSeconds: 30
            periodSeconds: 5
            failureThreshold: 3
          livenessProbe:
            exec:
              command:
                - /bin/grpc_health_probe
                - -addr=:50051
                - -tls
                - -tls-ca-cert=/etc/kubetail/ca.crt
                - -tls-server-name=kubetail-cluster-agent.kubetail-system.svc
                - -tls-client-cert=/etc/kubetail/tls.crt
                - -tls-client-key=/etc/kubetail/tls.key
            initialDelaySeconds: 10
            timeoutSeconds: 30
            periodSeconds: 5
            failureThreshold: 3
      volumes:
        - name: config
          projected:
            sources:
              - configMap:
                  name: kubetail-cluster-agent
              - secret:
                  name: kubetail-cluster-agent-tls
              - secret:
                  name: kubetail-ca
        - name: varlog
          hostPath:
            path: /var/log
        - name: varlibdockercontainers
          hostPath:
            path: /var/lib/docker/containers
---
kind: Service
apiVersion: v1
metadata:
  name: kubetail-cluster-agent
  namespace: kubetail-system
  labels:
    app.kubernetes.io/name: kubetail
    app.kubernetes.io/component: cluster-agent
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: kubetail
    app.kubernetes.io/component: cluster-agent
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: kubetail-cluster-agent
  namespace: kubetail-system
  labels:
    app.kubernetes.io/name: kubetail
    app.kubernetes.io/component: cluster-agent
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: kubetail
      app.kubernetes.io/component: cluster-agent
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: kubetail
              app.kubernetes.io/component: cluster-api
